[metadata]
name = fluent_tui_tool
version = 0.0.1
author = Rui Xu
author_email = rare0502@foxmail.com
description = a tool to generate the script to batch process
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ruixu2/Fluent-TUI-tool
project_urls =
    Bug Tracker = https://github.com/ruixu2/Fluent-TUI-tool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src